<resources>
    <string name="app_name">DOT Internship Test</string>

    <string name="list">List</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="detail">Detail</string>
    <string name="detailsingle">Detail Single</string>
    <string name="detailmultiple">Detail Multiple</string>
    <string name="detailgallery">Detail Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
