<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/app_navigation"
        app:startDestination="@id/fragmentOne">

    <!-- fragment list -->
    <fragment
            android:id="@+id/fragmentOne"
            android:label="@string/list"
            android:name="com.dot.baseandroid.menu.list.views.FragmentList"
            tools:layout="@layout/fragment_list">

        <action android:id="@+id/action_to_one_detail"
                app:destination="@id/fragmentOneDetail"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"/>

    </fragment>

    <fragment
            android:id="@+id/fragmentOneDetail"
            android:label="@string/detail"
            android:name="com.dot.baseandroid.menu.list.views.FragmentListDetail"
            tools:layout="@layout/fragment_list_detail">

        <argument
                android:name="data_detail_list_place"
                app:argType="com.dot.baseandroid.menu.list.models.PlaceModel"
                app:nullable="true"
                android:defaultValue="@null"/>

    </fragment>

    <!-- fragment gallery -->
    <fragment
            android:id="@+id/fragmentTwo"
            android:label="@string/gallery"
            android:name="com.dot.baseandroid.menu.gallery.views.FragmentGallery"
            tools:layout="@layout/fragment_gallery">

        <action android:id="@+id/action_to_two_detail"
                app:destination="@id/fragmentTwoDetail"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"/>

    </fragment>

    <fragment
            android:id="@+id/fragmentTwoDetail"
            android:label="@string/detailgallery"
            android:name="com.dot.baseandroid.menu.gallery.views.FragmentGalleryDetail"
            tools:layout="@layout/fragment_gallery_detail">

        <argument
                android:name="data_detail_gallery"
                app:argType="com.dot.baseandroid.menu.gallery.models.DataGalleryModel"
                app:nullable="true"
                android:defaultValue="@null"/>

    </fragment>

    <!-- fragment profile -->
    <fragment
            android:id="@+id/fragmentThree"
            android:label="@string/profile"
            android:name="com.dot.baseandroid.menu.profile.views.FragmentProfile"
            tools:layout="@layout/fragment_profile">

    </fragment>

</navigation>